--- a/src/.env.testing
+++ b/src/.env.testing
@@ -2,6 +2,6 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:zCArNPHJhMDj/9rA1XA4AeqLQo7nloxHxSg6+EXO5Tk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8001
 
 DB_CONNECTION=sqlite
