--- a/src/.env.example
+++ b/src/.env.example
@@ -1,9 +1,11 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:zCArNPHJhMDj/9rA1XA4AeqLQo7nloxHxSg6+EXO5Tk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8001
+FRONTEND_URL=http://localhost:3000
 
+APP_TIMEZONE=America/Sao_Paulo
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
@@ -20,12 +22,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=db
+DB_PORT=3306
+DB_DATABASE=hospital_db
+DB_USERNAME=laravel_user
+DB_PASSWORD=secret
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
