--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   # Serviço da Aplicação (Laravel/PHP)
   app:
     build:
-      context: ./docker/php # Caminho para o Dockerfile do PHP
-      dockerfile: Dockerfile
+      context: . # Caminho para o Dockerfile do PHP
+      dockerfile: docker/php/Dockerfile
     container_name: hospital_app
     restart: unless-stopped
     working_dir: /var/www/html
@@ -39,7 +39,7 @@ services:
     container_name: hospital_nginx
     restart: unless-stopped
     ports:
-      - "8001:80" # Acessaremos nossa aplicação em http://localhost:8000
+      - "8001:80" # Acessaremos nossa aplicação em http://localhost:8001
     volumes:
       - ./src:/var/www/html
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
